--- a/requirements.txt
+++ b/requirements.txt
@@ -44,4 +44,8 @@ urllib3==2.4.0
 validate-docbr==1.10.0
 Werkzeug==3.1.3
 psycopg2-binary
-
+Flask
+flask_sqlalchemy
+gunicorn
+psycopg2-binary
+pandas
