--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,22 @@ click==8.1.8
 colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
-Django==4.1.13
+django==4.1.13
 djangorestframework==3.15.1
 djongo==1.3.6
 dnspython==2.6.1
 et_xmlfile==2.0.0
-Flask==3.1.0
+flask==3.1.0
 flask-ngrok==0.0.25
+flask_sqlalchemy==3.1.1
 fonttools==4.51.0
 gunicorn==22.0.0
 idna==3.10
 itsdangerous==2.2.0
-Jinja2==3.1.6
+jinja2==3.1.6
 joblib==1.4.0
 kiwisolver==1.4.5
-MarkupSafe==3.0.2
+markupsafe==3.0.2
 matplotlib==3.8.4
 mysqlclient==2.2.4
 numpy==1.26.4
@@ -28,6 +29,7 @@ openpyxl==3.1.5
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
+psycopg2-binary==2.9.9
 pymongo==4.7.3
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
@@ -42,10 +44,4 @@ threadpoolctl==3.4.0
 tzdata==2024.1
 urllib3==2.4.0
 validate-docbr==1.10.0
-Werkzeug==3.1.3
-psycopg2-binary
-Flask
-flask_sqlalchemy
-gunicorn
-psycopg2-binary
-pandas
+werkzeug==3.1.3
