--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,34 @@
+alembic==1.16.1
 asgiref==3.8.1
 blinker==1.9.0
+Brotli==1.1.0
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 contourpy==1.2.1
+cssselect2==0.8.0
 cycler==0.12.1
-django==4.1.13
+Django==4.1.13
 djangorestframework==3.15.1
 djongo==1.3.6
 dnspython==2.6.1
 et_xmlfile==2.0.0
-flask==3.1.0
+Flask==3.1.0
+Flask-Migrate==4.1.0
 flask-ngrok==0.0.25
-flask_sqlalchemy==3.1.1
+Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
+greenlet==3.2.2
 gunicorn==22.0.0
 idna==3.10
 itsdangerous==2.2.0
-jinja2==3.1.6
+Jinja2==3.1.6
 joblib==1.4.0
 kiwisolver==1.4.5
-markupsafe==3.0.2
+Mako==1.3.10
+MarkupSafe==3.0.2
 matplotlib==3.8.4
 mysqlclient==2.2.4
 numpy==1.26.4
@@ -29,9 +36,13 @@ openpyxl==3.1.5
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10
+pycparser==2.22
+pydyf==0.11.0
 pymongo==4.7.3
+PyMuPDF==1.26.0
 pyparsing==3.1.2
+pyphen==0.17.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
@@ -39,9 +50,15 @@ scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
 six==1.16.0
+SQLAlchemy==2.0.41
 sqlparse==0.2.4
 threadpoolctl==3.4.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.13.2
 tzdata==2024.1
 urllib3==2.4.0
 validate-docbr==1.10.0
-werkzeug==3.1.3
+webencodings==0.5.1
+Werkzeug==3.1.3
+zopfli==0.2.3.post1
