--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ djongo==1.3.6
 dnspython==2.6.1
 et_xmlfile==2.0.0
 Flask==3.1.0
+Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 flask-ngrok==0.0.25
 Flask-SQLAlchemy==3.1.1
