--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 alembic==1.16.1
+APScheduler==3.11.0
 asgiref==3.8.1
 blinker==1.9.0
-Brotli==1.1.0
 certifi==2025.4.26
-cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 contourpy==1.2.1
-cssselect2==0.8.0
 cycler==0.12.1
 Django==4.1.13
 djangorestframework==3.15.1
@@ -38,12 +36,9 @@ packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
 psycopg2-binary==2.9.10
-pycparser==2.22
-pydyf==0.11.0
 pymongo==4.7.3
 PyMuPDF==1.26.0
 pyparsing==3.1.2
-pyphen==0.17.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
@@ -54,12 +49,9 @@ six==1.16.0
 SQLAlchemy==2.0.41
 sqlparse==0.2.4
 threadpoolctl==3.4.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
 typing_extensions==4.13.2
 tzdata==2024.1
+tzlocal==5.3.1
 urllib3==2.4.0
 validate-docbr==1.10.0
-webencodings==0.5.1
 Werkzeug==3.1.3
-zopfli==0.2.3.post1
