--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ et_xmlfile==2.0.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
+Flask-Mail==0.9.1            
 flask-ngrok==0.0.25
 Flask-SQLAlchemy==3.1.1
 fonttools==4.51.0
